add_library(TicTacToe
        #.cpp
        src/Board.cpp
        src/TicTacToePvP.cpp
        src/PlayerImpl.cpp
        src/ITicTacToe.cpp
        src/EasyMode.cpp
        src/HardMode.cpp
        src/ITicTacToeStrategy.cpp
        #.h
        include/Board.h
        include/ITicTacToe.h
        include/IPlayer.h
        include/TicTacToePvP.h
        include/PlayerImpl.h
        include/ECellType.h
        include/ITicTacToeStrategy.h
        include/EasyMode.h
        include/HardMode.h
        include/EDifficultyType.h
)

target_include_directories(TicTacToe
        PRIVATE
            src
            include
        PUBLIC
            include
)